--- a/index.html
+++ b/index.html
@@ -1,12 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Patrik Bajári</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.css" rel="stylesheet" />
+    <!-- [SAJÁT] - CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+
+
+
 </head>
+
 <body>
-    
+
+    <!-- 
+    <div class="bg-image" style="max-width: 100%;">
+        <img src="img/keyboard-g2b6b6f66d_1920.jpg" class="w-100" />
+        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+            style="background-color: rgba(0, 0, 0, 0.5)">
+            
+            <p class="m-0">Hello! I'm</p>
+            <h1>Patrik Bajári</h1>
+            <p class="m-0">A Passionate programmer</p>
+        </div>
+    </div>
+        -->
+
+    <header>
+        <nav class="navbar navbar-custom navbar-expand-lg nav-bg fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav my-nav-color">
+                        <a class="nav-link " aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#about-me">Bemutatkozás</a>
+                        <a class="nav-link" href="#references">Projektek</a>
+                        <a class="nav-link" href="#contact">Elérhetőségek</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <br>
+        <div class="container">
+            <section id="about-me">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="main">About me</h3>
+                        <p style="padding: 0">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of type
+                            and scrambled it to make a type specimen book. It has survived not only five centuries, but
+                            also the
+                            leap into electronic typesetting, remaining essentially unchanged. It was popularised in the
+                            1960s
+                            with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                            desktop
+                            publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <hr class="style-two">
+            <br>
+
+            <section id="references">
+                <div class="row">
+                    <h3 class="main"> Projects </h3>
+                </div>
+
+
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+
+                    <!-- Board Game -->
+                    <div class="project-bg-img bg-image hover-overlay ripple shadow-1-strong">
+                        <img src="img/fooldal.png" class="w-100" alt="Webshop" />
+
+                        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+                            style="background-color: rgba(0, 0, 0, 0.5)">
+                            <h4><i class="fas fa-search-plus">Board Game Webshop</i></h4>
+                            <p class="m-0">ASP.Net, C#, SQL, JS, HTML5, CSS, BOOTSTRAP</p>
+                            <br>
+                            <a href="https://github.com/Kmoori/Board-Game-Store" target="_blank"><button type="button"
+                                    class="project-button">Code</button></a>
+                        </div>
+                    </div>
+
+                    <!-- Szakdoga -->
+                    <div class=" project-bg-img bg-image hover-overlay ripple shadow-1-strong ">
+                        <img src="img/host oldal.png" class="w-100" alt="Szakdolgozat" />
+
+                        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+                            style="background-color: rgba(0, 0, 0, 0.5)">
+                            <h4><i class="fas fa-search-plus">AR Robotic Project</i></h4>
+                            <p class="m-0">Unity, C#, JSON, Vuforia, Relay</p>
+                            <br>
+                            <a href="https://github.com/Kmoori/Szakdolgozat" target="_blank"><button type="button"
+                                    class="project-button">Code</button></a>
+                        </div>
+                    </div>
+
+                    <!-- Game 1 -->
+                    <div class="project-bg-img bg-image hover-overlay ripple shadow-1-strong ">
+
+                        <img src="img/2.png" class="w-100" alt="Illusion" />
+
+                        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+                            style="background-color: rgba(0, 0, 0, 0.5);">
+                            <h4><i class="fas fa-search-plus">Brackeys Game Jam (One Week)</i></h4>
+                            <p class="m-0">Unity, C#</p>
+                            <br>
+                            <a href="https://kmoor.itch.io/brake-the-illusion" target="_blank"><button type="button"
+                                    class="project-button">Play</button></a>
+                        </div>
+                    </div>
+
+                    <!-- Game 2 -->
+                    <div class="project-bg-img bg-image hover-overlay ripple shadow-1-strong ">
+                        <img src="img/Froggy.png" class="w-100" alt="Froggy" />
+
+                        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+                            style="background-color: rgba(0, 0, 0, 0.5);">
+                            <h4><i class="fas fa-search-plus">School Game Project</i></h4>
+                            <p class="m-0">Unity, C#</p>
+                            <br>
+                            <a href="https://kmoor.itch.io/froggy-in-the-trap-castle" target="_blank"><button type="button"
+                                    class="project-button">Play</button></a>
+                        </div>
+                    </div>
+
+                    <!-- Game 3 -->
+                    <div class="project-bg-img bg-image hover-overlay ripple shadow-1-strong ">
+                        <img src="img/Dmine.png" class="w-100" alt="DMine" />
+
+                        <div class="mask text-light d-flex justify-content-center flex-column text-center"
+                            style="background-color: rgba(0, 0, 0, 0.5);">
+                            <h4><i class="fas fa-search-plus">Ludum Dare 48 (48 Hour)</i></h4>
+                            <p class="m-0">Unity, C#</p>
+                            <br>
+                            <a href="https://kmoor.itch.io/dwarf-mine" target="_blank"><button type="button"
+                                    class="project-button">Play</button></a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+
+            <br>
+            <hr class="style-two">
+            <br>
+
+            <section id="contact">
+                <div class="row">
+                    <h3 class="main">Elérhetőségek</h3>
+                </div>
+            </section>
+
+        </div>
+    </main>
+
+
+
+
 </body>
+
 </html>
