--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrik Bajári</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Bootstrap -->
@@ -86,8 +87,47 @@
                                 style="float:right;">Resume</button></a>
 
                     </div>
+                    <div class="about__skill-info">
+                        <h3 class="heading-quaternary about__heading-quaternary">
+                          My Skills
+                        </h3>
+                        <ul class="about__skills">
+                          <li class="about__skill">html</li>
+                          <li class="about__skill">css</li>
+                          <li class="about__skill">javascript</li>
+                          <li class="about__skill">git</li>
+                          <li class="about__skill">vscode</li>
+                          <li class="about__skill">git</li>
+                          <li class="about__skill">vscode</li>
+                        </ul>
+                      </div>
                 </div>
             </section>
+            <section class="skills-showcase">
+                <ul class="skills-showcase__list">
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-html5-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-css3-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-javascript-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-csharp-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-git-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-bootstrap-plain"></i>
+                  </li>
+                  <li class="skills-showcase__list-item">
+                    <i class="devicon-python-plain"></i>
+                  </li>
+                </ul>
+              </section>
 
             <hr class="style-two">
 
